github hompase modified

--- a/package.json
+++ b/package.json
@@ -42,5 +42,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://umkyungil.github.io/furuoka-drug-twitter"
+  "homepage": "https://umkyungil.github.io/furuokadrug-twitter"
 }
